# DL-CASE1

./: .gitignore  README.md
app/: docker-compose.yml
app/backend/: Dockerfile  main.py  pyproject.toml
app/backend/api/api_v1/endpoints/: models.py
app/backend/core/: settings.py
app/backend/models/: best.pt
app/backend/schemas/: models.py
app/backend/services/: model.py
app/ui/: nginx.conf
app/ui/src/: App.tsx
app/ui/src/api/: models.ts
matlab-code/: displaySigns.m  example.m
notebooks/: README.md  preprocess.ipynb  yolo.ipynb
notebooks/Detectron2/: Readme.md
notebooks/Detectron2/photo_prediction/: predict.py
notebooks/Detectron2/video_prediction/: output_video.avi  predict_video.py  requirements.txt
notebooks/r-fcn/: form_packages.ipynb  rfcn-pretrained.ipynb  train_test_folders.ipynb
notebooks/yolo/: train_yolo.ipynb  yolo.yaml
